--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,18 +6,19 @@ stages:
 
 variables:
   DOCKER_IMAGE:             docker:17.06.0-ce
-  DOCKER_DRIVER:            overlay2
-  DOCKER_HOST:              tcp://localhost:2375
-  DEV_TOOLS_IMAGE_SHA:      ${REGISTRY_DOMAIN}/${CI_PROJECT_PATH}:${CI_COMMIT_SHA}
-  DEV_TOOLS_IMAGE_LATEST:   ${REGISTRY_DOMAIN}/${CI_PROJECT_PATH}:latest
+  DEV_TOOLS_IMAGE_SHA:      ${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}
+  DEV_TOOLS_IMAGE_LATEST:   ${CI_REGISTRY_IMAGE}:latest
 
 devtools image:
   stage: prepare
   image: ${DOCKER_IMAGE}
   services:
     - ${DOCKER_IMAGE}-dind
+  variables:
+    DOCKER_DRIVER:            overlay2
+    DOCKER_HOST:              tcp://docker:2375
   script:
-    - docker login -u ${REGISTRY_USERNAME} -p ${REGISTRY_PASSWORD} ${REGISTRY_DOMAIN}
+    - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
     - docker pull ${DEV_TOOLS_IMAGE_LATEST} || true
     - docker build --pull --cache-from ${DEV_TOOLS_IMAGE_LATEST} -t ${DEV_TOOLS_IMAGE_SHA} docker
     - if [ "${CI_COMMIT_REF_NAME}" = "master" ]; then docker tag ${DEV_TOOLS_IMAGE_SHA} ${DEV_TOOLS_IMAGE_LATEST}; docker push ${DEV_TOOLS_IMAGE_LATEST}; fi
