refactored away 2nd list of nodes

--- a/roles/destroy-openstack-instances/tasks/main.yml
+++ b/roles/destroy-openstack-instances/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: remove instances
   os_server:
-    name: "{{ OVH_NODES_PREFIX }}-{{ item.name }}"
+    name: "{{ OVH_NODES_PREFIX }}-{{ item }}"
     state: absent
-  with_items: "{{ servers }}"
+  with_items: "{{ groups.ovh }}"
