--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ inventory = inventory
 nocows = 1
 retry_files_enabled = false
 callback_whitelist = profile_tasks
+gathering = explicit
 
 [ssh_connection]
 pipelining = true
