--- a/deploy.yml
+++ b/deploy.yml
@@ -4,3 +4,7 @@
   tasks:
     - name: wait for ssh to be available
       local_action: wait_for port=22 host="{{ ansible_host }}" search_regex=OpenSSH
+
+- hosts: ubuntu-1604
+  roles:
+    - { role: ubuntu-1604 }
