--- a/group_vars/vagrant.yml
+++ b/group_vars/vagrant.yml
@@ -1,4 +1,5 @@
 ---
-ansible_ssh_common_args: -o StrictHostKeyChecking=no
+ansible_ssh_common_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
 ansible_ssh_user: vagrant
 ansible_ssh_private_key_file: ~/.vagrant.d/insecure_private_key
+ansible_become: true
