--- a/ovh-provision.yml
+++ b/ovh-provision.yml
@@ -1,7 +1,6 @@
 ---
 - name: create instances
-  gather_facts: false
   hosts: localhost
   roles:
-    - { role: create-openstack-instances }
+    - { role: ovh-provision }
     - { role: rewrite-inventory }
