--- a/ovh-destroy.yml
+++ b/ovh-destroy.yml
@@ -1,6 +1,5 @@
 ---
 - name: create instances
-  gather_facts: false
   hosts: localhost
   roles:
-    - { role: destroy-openstack-instances }
+    - { role: ovh-destroy }
