--- a/roles/ubuntu-1604/tasks/main.yml
+++ b/roles/ubuntu-1604/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: install python
-  raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+  raw: test -e /usr/bin/python || (apt -y update && apt install -y python)
   changed_when: false
 
 - name: install docker
