--- a/roles/rewrite-inventory/tasks/main.yml
+++ b/roles/rewrite-inventory/tasks/main.yml
@@ -2,5 +2,5 @@
 
 - name: create inventory file
   template:
-    src=inventory.j2
-    dest="./inventory"
+    src: inventory.j2
+    dest: ./inventory
