mark install python only as changed when fresh installed
fix #5

--- a/roles/ubuntu-1604/tasks/main.yml
+++ b/roles/ubuntu-1604/tasks/main.yml
@@ -1,8 +1,9 @@
 ---
 
 - name: install python
-  raw: test -e /usr/bin/python || (apt -y update && apt install -y python)
-  changed_when: false
+  raw: ( test -e /usr/bin/python && echo "/usr/bin/python found" ) || ( apt -y update && apt install -y python )
+  register: install_python_result
+  changed_when: "'/usr/bin/python found' not in install_python_result.stdout"
 
 - name: install docker
   package:
