--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,7 @@ nocows = 1
 retry_files_enabled = false
 callback_whitelist = profile_tasks
 gathering = explicit
+force_handlers = true
 
 [ssh_connection]
 pipelining = true
