--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -136,3 +136,10 @@ etcd:
   retry: 2
   script:
     - bats tests/etcd.bats
+
+master:
+  stage: tests
+  image: ${DEV_TOOLS_IMAGE_SHA}
+  retry: 2
+  script:
+    - bats tests/master.bats
