--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,18 @@ FROM ubuntu:16.04
 
 # tools
 RUN apt-get update && \
-	apt-get install -y --no-install-recommends software-properties-common git curl rsync gettext-base nano dnsutils iputils-ping openssh-client make bash-completion bats && \
+	apt-get install -y --no-install-recommends \
+		software-properties-common \
+		git \
+		curl \
+		rsync \
+		gettext-base \
+		nano dnsutils \
+		iputils-ping \
+		openssh-client \
+		make \
+		bash-completion \
+		bats && \
 	apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 CMD ["bash"]
@@ -25,8 +36,9 @@ RUN pip install ansible-lint==3.4.13
 RUN echo . /etc/bash_completion >> /root/.bashrc
 
 # cloudflare ssl tools
-RUN curl -L -o cfssl     https://pkg.cfssl.org/R1.2/cfssl_linux-amd64     && echo "889d87f6814fbe8d6985713aca35e3be4c632afd cfssl"     | sha1sum -c -
-RUN curl -L -o cfssljson https://pkg.cfssl.org/R1.2/cfssljson_linux-amd64 && echo "a9766e7eef71a39a5d2ca94061c8a6004fcdd524 cfssljson" | sha1sum -c -
+ENV CFSSL_VERSION R1.2
+RUN curl -L -o cfssl     https://pkg.cfssl.org/${CFSSL_VERSION}/cfssl_linux-amd64
+RUN curl -L -o cfssljson https://pkg.cfssl.org/${CFSSL_VERSION}/cfssljson_linux-amd64
 RUN chmod +x cfssl* && mv cfssl* /usr/local/bin
 
 # kubectl
