--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -5,6 +5,7 @@ etcd_version:       v3.2.6
 nginx_version:      1.13.3-alpine
 
 kubernetes_image: "gcr.io/google_containers/hyperkube:{{ kubernetes_version }}"
+kube_proxy_image: "gcr.io/google_containers/kube-proxy:{{ kubernetes_version }}"
 etcd_image:       "gcr.io/etcd-development/etcd:{{ etcd_version }}"
 nginx_image:      "nginx:{{ nginx_version }}"
 
