--- a/roles/node/tasks/main.yml
+++ b/roles/node/tasks/main.yml
@@ -1,47 +1,4 @@
 ---
 
-- name: create directories
-  file:
-    path: "{{ item }}"
-    state: directory
-    recurse: true
-  with_items:
-    - /etc/kubernetes/manifests/
-    - /etc/kubelet/
-    - /usr/local/bin/
-
-- name: copy kubelet certificates
-  copy:
-    src: "{{ master_cert_dir }}/{{ item.local }}"
-    dest: "/etc/kubelet/{{ item.remote }}"
-  with_items:
-    - { local: 'ca.pem', remote: 'ca.pem' }
-    - { local: 'nodes.pem', remote: 'kubelet.pem' }
-    - { local: 'nodes-key.pem', remote: 'kubelet-key.pem' }
-    - { local: 'nodes-kube-config', remote: 'kubeconfig' }
-  no_log: true
-  notify:
-    - restart kubelet
-
-- name: download kubelet binary
-  get_url:
-    url: "https://storage.googleapis.com/kubernetes-release/release/{{ kubernetes_version }}/bin/linux/amd64/kubelet"
-    dest: /usr/local/bin/kubelet
-    checksum: sha256:2ca46b4a9e6f1771d6d2ad529f525bc3154e4e13f31e265e1923a832eed11ab5
-    mode: 0771
-
-- name: create kubelet service
-  template:
-    src: kubelet.service.j2
-    dest: /etc/systemd/system/kubelet.service
-  notify:
-    - reload systemd
-    - restart kubelet
-
-- meta: flush_handlers
-
-- name: start kubelet
-  service:
-    name: kubelet
-    enabled: yes
-    state: started
+- include: kubelet.yml
+- include: kube-proxy.yml
