added node names from inventory to certificates / fixed node names for ovh provision

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,3 +98,10 @@ kube-dns:
   retry: 2
   script:
     - bats tests/kube-dns.bats
+
+get logs:
+  stage: tests
+  image: ${DEV_TOOLS_IMAGE}
+  retry: 2
+  script:
+    - bats tests/logging.bats
