--- a/roles/ovh-provision/tasks/main.yml
+++ b/roles/ovh-provision/tasks/main.yml
@@ -40,7 +40,7 @@
 
 - name: add hosts to inventory
   add_host:
-    name: "{{ item.item.name }}"
+    name: "{{ OVH_NODES_PREFIX }}-{{ item.item.name }}"
     groups: "{{ item.item.groups }}"
     ansible_host: "{{ item.openstack.accessIPv4 }}"
   with_items: "{{ os_hosts.results }}"
