--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,11 @@ stages:
   - certificates
   - build
   - tests
+  - conformance-serial
   - destroy
 
 variables:
-  DEV_TOOLS_IMAGE: ${CI_REGISTRY_IMAGE}-tools:v2
+  DEV_TOOLS_IMAGE: ${CI_REGISTRY_IMAGE}-tools:v3
   KUBECONFIG:      ${CI_PROJECT_DIR}/certificates/master/admin-kube-config
 
 lint:
@@ -112,3 +113,19 @@ logging:
   retry: 2
   script:
     - bats tests/logging.bats
+
+conformance:
+  stage: tests
+  image: ${DEV_TOOLS_IMAGE}
+  retry: 2
+  script:
+    - cd /go/src/k8s.io/kubernetes
+    - go run hack/e2e.go -get=false -- -v -test -check-version-skew=false --provider=skeleton -test_args="--ginkgo.focus=\[Conformance\] --ginkgo.skip=\[Serial\]|\[Flaky\]|\[Feature:.+\]" --ginkgo-parallel
+
+conformance-serial:
+  stage: conformance-serial
+  image: ${DEV_TOOLS_IMAGE}
+  retry: 2
+  script:
+    - cd /go/src/k8s.io/kubernetes
+    - go run hack/e2e.go -get=false -- -v -test -check-version-skew=false --provider=skeleton -test_args="--ginkgo.focus=\[Serial\].*\[Conformance\]"
