--- a/roles/node/tasks/main.yml
+++ b/roles/node/tasks/main.yml
@@ -1,7 +1,12 @@
 ---
 
-- include: etc-hosts.yml
-- include: kubelet.yml
-- include: kube-proxy.yml
-- include: cni.yml
-- include: weave.yml
+- name: import etc hosts definition
+  import_tasks: etc-hosts.yml
+- name: import kubelet definition
+  import_tasks: kubelet.yml
+- name: import kube-proxy definition
+  import_tasks: kube-proxy.yml
+- name: import cni definition
+  import_tasks: cni.yml
+- name: import weave definition
+  import_tasks: weave.yml
